# mrpc

./: Cargo.toml  README.org
mrpc/: Cargo.toml
mrpc-demo/: Cargo.toml
mrpc-demo/src/: main.rs
mrpc-derive/: Cargo.toml
mrpc-derive/src/: attr.rs  common.rs  lib.rs  rpc.rs  server.rs  service.rs
mrpc-derive/src/service/: attr.rs  ident.rs  item_enum.rs  item_trait.rs  mod.rs  rpc.rs
mrpc-derive/tests/: service.rs
mrpc-derive/tests/ui/: null_server.rs  null_server.stderr
mrpc-example/: Cargo.toml
mrpc-example/basic/: main.rs
mrpc-example/wasm/: README.org  index.html  main.rs
mrpc-macro/: Cargo.toml
mrpc-macro/src/: common.rs  lib.rs
mrpc-macro/src/router/: mod.rs
mrpc-macro/src/service/: item_impl.rs  mod.rs  rpc_method.rs
mrpc-macro/src/service_impl/: mod.rs
mrpc-macro/tests/: test.rs
mrpc/src/: client.rs  error.rs  lib.rs  message.rs  server.rs  service.rs
mrpc/src/net/: mod.rs  tcp.rs
mrpc/src/net/websocket/: accept.rs  channel.rs  connect.rs  message.rs  mod.rs  ws.rs  ws_web.rs
mrpc/src/net/websocket/stream/: mod.rs  native.rs  web.rs
mrpc/src/transport/: accept.rs  channel.rs  connect.rs  message.rs  mod.rs  sender.rs
mrpc/src/transport/back/: accept.rs  connect.rs  message.rs  mod.rs
mrpc/src/transport/back/stream/: mod.rs  native.rs
mrpc/src/transport/native/: mod.rs
mrpc/src/transport/stream/tcp/: mod.rs
mrpc/src/transport/stream/websocket/: mod.rs  native.rs
mrpc/src/transport/tcp/: mod.rs
