[package]
name = "mrpc-example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
tcp = ["mrpc/tcp"]
websocket = ["mrpc/websocket"]
websocket_web = ["mrpc/websocket_web"]

[[bin]]
name = "basic"
path = "basic/main.rs"

[[bin]]
name = "wasm"
path = "wasm/main.rs"

[dependencies]
mrpc = { path = "../mrpc", default-features = false }
tokio = { version = "1", features = ["time", "rt", "macros"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
