[package]
name = "mrpc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mrpc-derive = { path = "../mrpc-derive" }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
tokio-serde = { version = "0.8", features = ["json", "bincode"] }
tokio-util = { version = "0.6", features = ["codec"] }
futures = "0.3"
async-trait = "0.1"

anyhow = "1.0"
thiserror = "1.0"
log = "0.4"
